dockerized database connection

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,26 +1,22 @@
-image:
-  file: .gitpod.Dockerfile
-
 tasks:
-  - name: Setup phpMyAdmin and MySQL
+  - name: Start Docker Containers
     init: |
-      # Start MySQL
-      sudo service mysql start
+      docker-compose up -d
 
-      # Set up MySQL user and grant privileges
-      sudo mysql -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'mike123';"
-      sudo mysql -e "GRANT ALL PRIVILEGES ON *.* TO 'user'@'localhost';"
-      sudo mysql -e "FLUSH PRIVILEGES;"
-
-      # Download and extract phpMyAdmin
-      curl -L https://www.phpmyadmin.net/downloads/phpMyAdmin-latest-all-languages.zip -o phpmyadmin.zip
-      unzip phpmyadmin.zip
-      mv phpMyAdmin-*-all-languages phpmyadmin
-      rm phpmyadmin.zip
     command: |
-      # Start PHP server for phpMyAdmin on port 8080
-      php -S 0.0.0.0:8080 -t phpmyadmin
+      echo "✅ Services started"
+      echo "🔗 phpMyAdmin: $(gp url 80)"
+      echo "🗄️  Databases: project1_db, project2_db, project3_db"
+      echo "🔐 MySQL User: dev / devpass123"
 
 ports:
-  - port: 8080
+  - port: 3306
+    onOpen: ignore
+    description: MySQL Database
+  - port: 80
     onOpen: open-preview
+    description: phpMyAdmin Interface
+
+vscode:
+  extensions:
+    - formulahendry.vscode-mysql
